hphp/test/zend/bad/ext/standard/tests/general_functions/bug47027.php
<?php
$ao = new ArrayObject(array (2 => "foo", "bar" => "baz"));
var_export ($ao);
?>